# CodeMantle

./: .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: ci.yml  release-agent.yml  release-codemantle.yml  release-control-plane.yml  release-desktop.yml
apps/control-plane/: .env.example  .npmrc  README.md  package-lock.json  package.json  tsconfig.json
apps/control-plane/public/: app.js  index.html  login.html  login.js  styles.css
apps/control-plane/schemas/: agent-template.schema.json
apps/control-plane/src/: auth.ts  bootstrap.ts  cli.ts  config-registry.ts  contracts.ts  env-schema.ts  index.ts
apps/desktop-app/: .npmrc  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop-app/scripts/: generate-icons.js
apps/desktop-app/src/: App.css  App.tsx  index.css  updater.ts
apps/desktop-app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop-app/src-tauri/src/: main.rs
apps/desktop-app/src/components/: SettingsView.tsx
apps/desktop-app/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  LogViewer.tsx  Logo.tsx  StepIndicator.tsx  Toggle.tsx
apps/desktop-app/src/hooks/: useLogs.ts
apps/desktop-app/src/types/: index.ts
apps/desktop-app/src/utils/: index.ts
docs/: architecture.md  deployment.md  security-model.md
docs/runbooks/: control-plane-bootstrap.md  control-plane-npm-operations.md
(+4 files in other folders)
